tests/check/span_as.co
// RUN: choreo -sa=check %s 2>&1 | FileCheck %s

__co__ auto span_as(s32 [32, 18, 9] a) {
  f32 [a.span + 1] b;

  c = a.span_as([288, 18]);  // ok. same size
  d = a.span_as([576, 1, 3, 3]); // ok. same size
  e = b.span_as([288, 18]);  // failed. inconsistent size
//  f = a.span_as(b.span - 1); // ok. same size
// TODO: support span_expr instead of a list
}

// CHECK: error: Inconsistent mdspan size: b(6270) = spanas (anon_2(5184)).
// CHECK: Totally 1 errors have been detected.
